--- a/src/app/hero/hero.html
+++ b/src/app/hero/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
     <div class="hero-details">
-        <h1>Aya Gamal</h1>
-        <p>Front end developer</p>
+        <h1>{{name}}</h1>
+        <p>{{job}}</p>
     </div>
     
 </section>
